--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -1,44 +1,124 @@
-header img {
-	float: left;
-	padding: 10px;
-	width: 117px;
-	height: 113px;
+@charset "utf-8";
+ /*http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font-style: normal;
+	vertical-align: baseline;
+}
+h1,h2,h3 {
+    font-family: Noto Sans JP, sans-serif; font-size: auto;
+}
+body{
+	font-family: 'Open Sans';font-size: 16px;
 }
 header {
-	padding-top: 25px;
-	width: 100%;
-	height: 230px;
-	background: #7cc576;
-	margin-top: -10px;
+	 background: #7cc576;
+	 height: 230px;
+	 clear: both;
 }
-header h1 {
-	color: #000000;
-	font-size: auto;
+
+.header img {
+	float:left;
+  	width: 100px;
+ 	height: 100px;
+ 	padding-left: 30px;
+ 	padding-top: 20px;
+}
+h1 {
+  	position: relative;
+  	padding-top: 30px;
+  	padding-left: 200px;
+  	font-size: 200%;
+  	text-align: left;
+}
+h2{
+	position: relative;
+	padding-top: 30px;
+	font-size: 150%;
+}
+h3{
 	text-align: left;
-	padding-left: 200px;
-}
-.nav ul li a {
-	text-decoration: none;
+	position: relative;
+	padding-top: 30px;
+	padding-bottom: 15px;
+	font-size: 125%;
 }
 .nav ul{
-	list-style: none;
+	list-style-type: none;
 	margin: 30px;
 	padding: 40px;
 	display: flex;
 	justify-content: space-around;
 }
 .nav li {
-  display: inline-block;
-  font-size: 20px;
-  padding: 20px;
-  background-color: #6dcff6;
-  width: 162px;
-  text-align: center;
+ 	display: inline-block;
+  	font-size: 20px;
+ 	padding: 20px;
+  	background-color: #6dcff6;
+  	width: 162px;
+  	text-align: center;
+  	border-radius: 10px;
+}
+section {
+  	float: left;
+  	margin: 0 1.5%;
+  	width: 70%;
+  	height: 390px;
+}
+article{
+	float: left;
+	margin: 0 1.5%;
+	width: 63%;
+}
+aside{
+	position: absolute;
+ 	float: right;
+ 	width: 25%;
+ 	right: 0px;
+ 	top: 290px;
 }
 body {
 	background: url(../img/watercolor.png);
-	font-family: calibri;
+}
+.image-gallery{
+	float: left;
+	width: 33.3%;
+	padding: 5px;
+	box-sizing: border-box;
+	text-align: center;
 }
 a {
 	color: #000000;
+	text-decoration: none;
+}
+
+footer{
+	background: #7cc576;
+	height: 110px;
+	clear: both;
+}
+.footer-container{
+	text-align: left;	
+}
+.social-container{
+	text-align: right;
 }
