--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -23,7 +23,6 @@ time, mark, audio, video {
 	font-size: 100%;
 	font-style: normal;
 	vertical-align: baseline;
-	text-decoration: none;
 }
 .clearfix:after {
 	content: "";
@@ -72,12 +71,17 @@ h3{
 ol, ul {
 	list-style: none;
 }
+a{
+	color: inherit;
+	text-decoration: none;
+}
 .nav ul{
 	display: inline-block;
-	margin: 30px;
-	padding: 40px;
+	padding-top: 15px;
+	padding-left: 30px;
 	display: flex;
 	justify-content: space-around;
+	clear: both;
 } 
 .nav li {
   	font-size: 20px;
@@ -86,7 +90,6 @@ ol, ul {
   	width: 162px;
   	text-align: center;
   	border-radius: 10px;
-  	color: #000000;
 }
 section {
   	float: left;
@@ -110,7 +113,6 @@ article{
 		box-shadow: none;
 		padding: 15px;
 }
-
 }
 a{
 	color: #000000;
@@ -136,5 +138,11 @@ div.images{
 }
 .caption{
 	display: block;
+}
+#image-2{
+	padding-left: 230px;
+}
+#image-3{
+	padding-left: 230px;
 }
 /*focus on changing width and padding in my nav and images/*
