--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -35,26 +35,29 @@ h1,h2,h3 {
 }
 body{
 	font-family: 'Open Sans', sans-serif;
-	font-size: 18px;
+	font-size: 16px;
+	line-height: normal;
 }
 header {
 	 background: #7cc576;
 	 height: 230px;
 	 clear: both;
 }
-.header img {
+.site-header img {
 	float:left;
   	width: 100px;
  	margin-left: 20px;
  	margin-top: 20px;
  	box-sizing: border-box;
 }
-h1 {
-  	position: relative;
-  	padding-top: 30px;
-  	padding-left: 200px;
-  	font-size: 200%;
-  	text-align: left;
+.page-title{
+	float: left;
+	width: calc(100% -120px);
+	box-sizing: border-box;
+	padding: 40px;
+	font-size: 300%;
+	margin-left: 200px;
+	margin-right: 400px;
 }
 h2{
 	position: relative;
@@ -75,19 +78,29 @@ a{
 	color: inherit;
 	text-decoration: none;
 }
-.nav ul{
-	padding-top: 15px;
-	display: flex;
-	justify-content: space-around;
+.desptop-nav{
 	clear: both;
+	display: none;
+}
+.desktop-nav ul{
+	width: 100%;
 } 
-.nav li {
-  	font-size: 20px;
- 	padding: 20px;
-  	background-color: #6dcff6;
-  	width: 165px;
-  	text-align: center;
-  	border-radius: 10px;
+.desktop-nav li {
+	box-sizing: border-box;
+  	width: 25%;
+  	padding-right: 70px;
+  	padding-left: 50px;
+  	float: left;
+  	position: relative;
+}
+.main-nav a{
+	display: block;
+	box-sizing: border-box;
+	padding: 20px;
+	background-color: #6dcff6;
+	text-align: center;
+	border-radius: 10px;
+	font-size: 150%;
 }
 body{
 	background: url(../img/watercolor.png);
