--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -31,7 +31,6 @@ time, mark, audio, video {
 }
 h1,h2,h3 {
     font-family: 'Noto Sans JP', sans-serif;
-    font-size: auto;
 }
 body{
 	font-family: 'Open Sans', sans-serif;
@@ -52,7 +51,6 @@ header {
 }
 .page-title{
 	float: left;
-	width: calc(100% -120px);
 	box-sizing: border-box;
 	padding: 40px;
 	font-size: 300%;
@@ -71,8 +69,11 @@ h3{
 	padding-bottom: 15px;
 	font-size: 125%;
 }
-ol, ul {
+ol, ul{
 	list-style: none;
+}
+li{
+	display: inline-block;
 }
 a{
 	color: inherit;
@@ -95,7 +96,6 @@ a{
 }
 .main-nav a{
 	display: block;
-	box-sizing: border-box;
 	padding: 20px;
 	background-color: #6dcff6;
 	text-align: center;
@@ -107,29 +107,32 @@ body{
 }
 section {
   	float: left;
-  	margin: 0 1.5%;
+  	margin: 1.5%;
   	width: 70%;
-  	height: 355px;
+  	word-wrap: break-word;
 }
 aside{
 	position: absolute;
  	float: right;
+ 	display: block;
  	width: 25%;
  	right: 0px;
- 	top: 290px;
+ 	top: 300px;
 }
-
 article{
-		box-sizing: border-box;
-		float: left;
-		box-shadow: none;
-		padding: 15px;
+	box-sizing: border-box;
+	float: left;
+	padding: 15px;
+	padding-top: 30px;
+}
+#image-1{
+	padding-left: 20px;
 }
 #image-2{
-	padding-left: 230px;
+	padding-left: 210px;
 }
 #image-3{
-	padding-left: 230px;
+	padding-left: 210px;
 }
 div.images{
 	vertical-align: top;
@@ -139,21 +142,12 @@ div.images{
 .caption{
 	display: block;
 }
-a{
-	color: #000000;
-	text-decoration: none;
-}
 footer{
 	background: #7cc576;
-	clear: both;
+	padding: 60px;
 }
-.footer-container{
-	text-align: left;
-	box-sizing: border-box;
+#social-container{
+	float: right;
+	position: relative;
+	margin-top: -35px;
 }
-.social-container{
-	display: inline;
-}
-
-
-/*focus on changing width and padding in my nav and images/*
