--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -66,7 +66,7 @@ h3{
 	text-align: left;
 	position: relative;
 	padding-top: 30px;
-	padding-bottom: 15px;
+	padding-bottom: 10px;
 	font-size: 125%;
 }
 ol, ul{
@@ -85,7 +85,7 @@ a{
 }
 .desktop-nav ul{
 	width: 100%;
-} 
+}
 .desktop-nav li {
 	box-sizing: border-box;
   	width: 25%;
@@ -105,18 +105,17 @@ a{
 body{
 	background: url(../img/watercolor.png);
 }
-section {
+section{
   	float: left;
-  	margin: 1.5%;
-  	width: 70%;
-  	word-wrap: break-word;
+  	margin-left: 25px;
+  	width: 65%;
 }
 aside{
 	position: absolute;
  	float: right;
  	display: block;
- 	width: 25%;
- 	right: 0px;
+ 	width: 300px;
+ 	right: 20px;
  	top: 300px;
 }
 article{
@@ -124,6 +123,12 @@ article{
 	float: left;
 	padding: 15px;
 	padding-top: 30px;
+}
+.site-sidebar p{
+	width: 280px;
+}
+.main-content p{
+	width: 605px;
 }
 #image-1{
 	padding-left: 20px;
@@ -144,7 +149,7 @@ div.images{
 }
 footer{
 	background: #7cc576;
-	padding: 60px;
+	padding: 50px;
 }
 #social-container{
 	float: right;
