--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -32,6 +32,7 @@ time, mark, audio, video {
 .clearfix{
 	overflow: auto;
 }
+/*add your font and font sizes here*/
 h1,h2,h3 {
     font-family: 'Noto Sans JP', sans-serif;
 }
@@ -40,11 +41,13 @@ body{
 	font-size: 16px;
 	line-height: normal;
 }
+/*make sure to add your dimensions from photopea mockup*/
 header {
 	 background: #7cc576;
 	 height: 230px;
 	 clear: both;
 }
+/*this is for the logo*/
 .site-header img {
 	float:left;
   	width: 100px;
@@ -52,6 +55,7 @@ header {
  	margin-top: 20px;
  	box-sizing: border-box;
 }
+/*header at the top of the page*/
 .page-title{
 	float: left;
 	box-sizing: border-box;
@@ -65,9 +69,9 @@ h2{
 	padding-top: 20px;
 	font-size: 150%;
 }
+/*these are for your headers in your article and aside*/
 h3{
 	text-align: left;
-	position: relative;
 	padding-top: 30px;
 	padding-bottom: 10px;
 	font-size: 125%;
@@ -78,6 +82,7 @@ ol, ul{
 li{
 	display: inline-block;
 }
+/*this will remove the underline and the blue color in your navigation bar*/
 a{
 	color: inherit;
 	text-decoration: none;
@@ -95,7 +100,6 @@ a{
   	padding-right: 70px;
   	padding-left: 50px;
   	float: left;
-  	position: relative;
 }
 .main-nav a{
 	display: block;
@@ -105,19 +109,20 @@ a{
 	border-radius: 10px;
 	font-size: 150%;
 }
+/*this is where you add your website background*/
 body{
 	background: url(../img/watercolor.png);
 }
 section{
   	float: left;
   	margin-left: 25px;
-  	width: 65%;
 }
+/*position: absolute will help make the aside stay to the right*/
 aside{
 	position: absolute;
  	float: right;
  	display: block;
- 	width: 300px;
+ 	width: 290px;
  	right: 20px;
  	top: 300px;
 }
@@ -159,3 +164,4 @@ footer{
 	position: relative;
 	margin-top: -35px;
 }
+/*created by Krystal Sobhie 2021-03-26*/
