--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -39,14 +39,6 @@ header, main, footer{
 	max-width: 1280px:
 	margin: 0 auto;
 }
-/*blockquote, q{
-	quotes: none;
-}
-blockquote: before, blockquote: after,
-q: before, q: after{
-	content: "";
-	content: none;
-}*/
 /*add your font and font sizes here*/
 h1,h2,h3 {
     font-family: 'Noto Sans JP', sans-serif;
@@ -59,9 +51,6 @@ body{
 /*make sure to add your dimensions from photopea mockup*/
 header {
 	 background: #7cc576;
-	/* height: 230px;*/
-	/* clear: both;
-	 width: 100%;*/
 }
 /*this is for the logo*/
 .site-header img {
@@ -77,7 +66,7 @@ header {
 	box-sizing: border-box;
 	padding: 40px;
 	font-size: 300%;
-	margin-left: 200px;
+	margin-left: 150px;
 }
 h2{
 	position: relative;
@@ -131,17 +120,16 @@ a{
 body{
 	background: url(../img/watercolor.png);
 }
-article{
+.main-content{
   	float: left;
   	margin-left: 25px;
   	max-width: 65%;
   	box-sizing: border-box;
 }
-
 .site-sidebar{
 	float: right;
-	/*width: 35%;*/
-	margin-top: 40px;
+	max-width: 35%;
+	margin-top: 70px;
 	margin-right: 10px;
 	box-sizing: border-box;
 }
@@ -153,7 +141,6 @@ article{
 	content: "";
 	clear: both;
 	display: table;
-	/*padding-left: 25px;*/
 	width: 100%;
 	padding-left: 25px;
 }
@@ -164,38 +151,6 @@ article{
 	box-sizing: border-box;
 	text-align: center;
 }
-/*figcaption{
-	text-align: center;
-}*//*add border box*/
-/*aside{
-	position: absolute;
- 	float: right;
- 	display: block;
- 	width: 35%;
- 	right: 20px;
- 	top: 300px;
- 	text-align: center;
-}*/
-
-/*.main-content p{
-	width: 605px;
-}
-/*these are for the images in the article*/
-/*#image-1{
-	padding-left: 20px;
-}
-#image-2{
-	padding-left: 210px;
-}
-#image-3{
-	padding-left: 210px;
-}
-div.images{
-	vertical-align: top;
-	display: inline-block;
-	text-align: center;
-}*/
-
 /*footer css style*/
 footer{
 	background: #7cc576;
