--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -36,7 +36,7 @@ time, mark, audio, video {
 	box-sizing: border-box;
 }
 header, main, footer{
-	max-width: 1280px:
+	max-width: 1280px;
 	margin: 0 auto;
 }
 /*add your font and font sizes here*/
