--- a/lib2024/assg-4/css/style.css
+++ b/lib2024/assg-4/css/style.css
@@ -24,34 +24,55 @@ time, mark, audio, video {
 	font-style: normal;
 	vertical-align: baseline;
 }
+/*CSS clearfix*/
 .clearfix:after {
 	content: "";
 	display: table;
 	clear: both;
 }
-.clearfix{
+
+.clearfix {
 	overflow: auto;
 }
-*{
+
+* {
 	box-sizing: border-box;
 }
-header, main, footer{
+
+/*HTML5 display-role reset for older browsers*/
+article, aside, figcaption, figure, 
+footer, header, nav, section {
+	display: block;
+}
+
+/*This media query targets, tablet and above*/
+@media only screen and (min-width: 768px) {
+/*for smooth navigation*/
+header, main, footer {
 	max-width: 1280px;
 	margin: 0 auto;
 }
+
+.col-main, .col-footer {
+	width:100%;
+}
+
 /*add your font and font sizes here*/
 h1,h2,h3 {
     font-family: 'Noto Sans JP', sans-serif;
 }
-body{
+
+body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	line-height: normal;
 }
+
 /*make sure to add your dimensions from photopea mockup*/
 header {
 	 background: #7cc576;
 }
+
 /*this is for the logo*/
 .site-header img {
 	float:left;
@@ -60,46 +81,54 @@ header {
  	margin-top: 20px;
  	box-sizing: border-box;
 }
+
 /*header at the top of the page*/
-.page-title{
+.page-title {
 	float: left;
 	box-sizing: border-box;
 	padding: 40px;
 	font-size: 300%;
 	margin-left: 150px;
 }
-h2{
+
+/*for header in the main content*/
+h2 {
 	position: relative;
 	padding-top: 20px;
 	font-size: 150%;
 }
+
 /*these are for your headers in your article and aside*/
-h3{
+h3 {
 	text-align: left;
 	padding-top: 20px;
 	padding-bottom: 10px;
 	font-size: 125%;
 }
-ol, ul{
+
+/*for my list in the footer*/
+ol, ul {
 	list-style: none;
 }
-li{
+li {
 	display: inline-block;
 }
 /*this will remove the underline and the blue color in your navigation bar*/
-a{
+a {
 	color: inherit;
 	text-decoration: none;
 }
-.desptop-nav{
+
+.desptop-nav {
 	clear: both;
-	display: none;
 	width: calc(100% - 100px);
 	max-width: 600px;
 }
-.desktop-nav ul{
+
+.desktop-nav ul {
 	width: 100%;
 }
+
 .desktop-nav li {
 	box-sizing: border-box;
   	width: 25%;
@@ -107,7 +136,8 @@ a{
   	padding-left: 50px;
   	float: left;
 }
-.main-nav a{
+
+.main-nav a {
 	display: block;
 	box-sizing: border-box;
 	padding: 20px;
@@ -115,50 +145,63 @@ a{
 	text-align: center;
 	border-radius: 10px;
 	font-size: 150%;
+	width: 100%;
+	transition: 1s;
 }
 /*this is where you add your website background*/
-body{
+body {
 	background: url(../img/watercolor.png);
 }
-.main-content{
+
+.site-content {
   	float: left;
   	margin-left: 25px;
   	max-width: 65%;
   	box-sizing: border-box;
 }
-.site-sidebar{
+
+.site-sidebar {
 	float: right;
 	max-width: 35%;
 	margin-top: 70px;
 	margin-right: 10px;
 	box-sizing: border-box;
 }
-.site-sidebar p{
+
+.site-sidebar p {
 	width: 270px;
 }
-.image-gallery{
+
+.image-gallery {
 	content: "";
 	clear: both;
 	display: table;
 	width: 100%;
 	padding-left: 25px;
+	box-sizing: border-box;
 }
-.image-slide{
+
+.image-slide {
 	padding: 10px;
 	float: left;
 	width: 33.3%;
-	box-sizing: border-box;
 	text-align: center;
+	box-sizing: border-box;
 }
+
 /*footer css style*/
-footer{
+footer {
 	background: #7cc576;
 	padding: 50px;
+	width: 100%;
+	box-sizing: border-box;
 }
-#social-container{
+
+#social-container {
 	float: right;
 	position: relative;
 	margin-top: -35px;
+	box-sizing: border-box;
 }
-
+}
 /*created by Krystal Sobhie 2021-03-26*/
