--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -129,16 +129,20 @@ body{
   display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 30px;
   text-decoration: none;
+  transition: all .2s ease-in-out;
 }
 
 .main-nav li a:hover {
   background-color: #487b7d;
+  transform: scale(1.1);
+  transition: all .2s ease-in-out;
 }
 
+
 /*Hamburger styling*/
-/*.ham {
+.ham {
 	float: right;
 }
 
@@ -192,18 +196,210 @@ body{
 	background: lightgreen;
 	border-bottom: 2px solid #121212;
 
-}*/
+}
 /*Start of article styling*/
 
 .main-site{
 	float: left;
 	box-sizing: border-box;
 	max-width: 65%;
-	padding: 20px;
-	padding-bottom: 30px;
+	padding: 30px;
+
 }
+/*Image to the side of the main article*/
 .img{
 	float: right;
 	box-sizing: border-box;
-	padding: 35px;
+	padding: 30px;
+	margin-top: 40px;
 }
+/*This is the styling for the table*/
+/*.schedule-header{
+	padding: 20px;
+	word-wrap: all;
+}
+*/.schedule-container td, .schedule-container th {
+  border: 2px solid #656565;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+.schedule-container tr:nth-child(even){background-color: #efefef;
+}
+
+th{
+	color: #72a9ae;
+	font-weight: 700;
+}
+table{
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 95%;
+}
+/*END OF TABLE STYLING*/
+/*PROFILE FORMS STYLING BEGINNING*/
+.profile{
+	padding: 5px;
+}
+.form-value-transfer{
+	margin: 20px;
+	min-width: 50%;
+	float: left;
+}
+input[type=text], input[type=email], select, textarea {
+  padding: 5px;
+  border: 2px solid black;
+  resize: vertical;
+  box-sizing: border-box;
+  display: table;
+  margin-left: 125px;
+  width: 50%;
+}
+label {
+  padding: 12px 12px 12px 5px;
+  float: left;
+  box-sizing: border-box;
+  display: inline-block;
+}
+button{
+  padding: 5px;
+  background-color: white;
+  cursor: pointer;
+  float: right;
+  box-sizing: border-box;
+  margin-right: 125px;
+ }
+
+button:hover {
+	background: #B2D4CD;
+}
+/*END OF EDIT PROFILE STYLING*/
+/*BEGINNING OF PROFILE CARD*/
+aside{
+	float: right;
+	max-width: 50%;
+	background-color: green
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: inherit;
+  text-align: center;
+}
+
+/*Footer styles*/
+
+.container{
+	max-width: 90%;
+	margin:auto;
+}
+.footer{
+	background-color: #454545;
+	padding: 15px 0;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+.footer-col{
+	width: 31%;
+	padding: 0 10px;
+	margin-bottom: 10px;
+}
+.footer-col h4{
+	color: white;
+	font-weight: 700;
+	margin-bottom: 15px;
+	position: relative;
+}
+
+.footer-col ul li, p:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	color: #bbbbbb;
+	text-decoration: none;
+	font-size: 14px;
+	/*font-weight: 200;*/
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+
+.footer-col p{
+	color: #bbbbbb;
+}
+
+.footer-col .social-links a{
+	display: inline-block;
+	height: 50px;
+	width: 50px;
+	/*background-color: rgba(255,255,255,0.2);*/
+	margin: 5px 10px;
+	text-align: center;
+	line-height: 50px;
+	border-radius: 50%;
+	float: left;
+	color: #ffffff;
+}
+.fa-twitter {
+  background: #1DA1F2;
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+.fa-facebook-f{
+	background: #3b5998;
+  	height: 50px;
+  	width: 50px;
+  	line-height: 50px;
+  	border-radius: 50%;
+  	vertical-align: middle;
+}
+.fa-youtube {
+  	height: 50px;
+  	width: 50px;
+  	line-height: 50px;
+  	border-radius: 50%;
+  	vertical-align: middle;
+  	background: linear-gradient(0deg,#ff0000, #bb1f2c);
+}
+
+/*@media(max-width: 767px)*/
+/*.footer-col p{
+	color: white;
+}*
+/*footer {
+	background: #454545;*/
+	/*padding: 15px;*/
+/*	max-width: 100%;
+	box-sizing: border-box;
+	padding: 10px;
+}
+.col-footer{
+	color: white;
+	width: 31%;
+	display: inline-block;
+}*/
+/*a{
+	text-decoration: none;
+	color: white;
+}*/
+/*h4{
+	font-weight: 700;*/
+	/*padding: 5px;*/
+	/*display: inline-flex;*/
+}
+/*.social-container li{
+	display: inline-block;
+	padding: 8px;
+	align-content: center;
+}
+
+*/
