--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -105,6 +105,7 @@ body{
 
 /*Header NAV STYLES*/
 .logo {
+	margin-left: 20px;
 	padding: 20px;
 	box-sizing: border-box;
 }
@@ -205,6 +206,7 @@ body{
 	float: left;
 	box-sizing: border-box;
 	width: 70%;
+	padding-bottom: 30px;
 }
 /*Image to the side of the main article*/
 .img{
@@ -294,14 +296,14 @@ aside{
 }
     
 .fa-user-alt{
-	font-size: 500%;
-	transform: scale(1.5, 1.25);
+	font-size: 600%;
+	transform: scale(1.15, 1.15);
 	border-radius: 50%;
     border: 1px solid #72a9ae;
     width: 125px;
     height: 125px;
     overflow: hidden;
-    line-height: 150px;
+    line-height: 125px;
 }
 
 /*Footer styles*/
