--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -80,7 +80,7 @@ h1{
 }
 
 h2{
-	line-height: 2.5;
+	line-height: 3;
 	font-weight: 700;
 	color: #72a9ae;
 }
@@ -104,6 +104,8 @@ body{
 .logo {
 	padding: 20px 0px 20px 0px;
 	box-sizing: border-box;
+	width: 50%;
+	float: left;
 }
 
 .desktop-nav {
@@ -257,7 +259,7 @@ button{
 	cursor: pointer;
 	float: right;
 	box-sizing: border-box;
-	margin-right: 40px;
+	margin-right: 35px;
  }
 
  button:hover {
@@ -269,16 +271,17 @@ button{
 
 .profile-info{
 	box-sizing: border-box;
+	margin-bottom: -20px;
 }
 
 .results{
 	background-color: white;
 	box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
 	width: 100%;
-	margin: 10px 0px 10px 10px;
+	margin: 20px 0px 20px;
 	text-align: center;
 	float: right;
-	padding: 20px 20px 30px;
+	padding: 30px 0px 30px;
 	box-sizing: border-box;
 	word-wrap: break-word;
 }
@@ -288,8 +291,8 @@ button{
 	transform: scale(1.15, 1.15);
 	border-radius: 50%;
     border: 1px solid #72a9ae;
-    width: 125px;
-    height: 125px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
     line-height: 125px;
     margin-bottom: 10px;
@@ -366,6 +369,7 @@ h4{
 }
 
 .fa-twitter {
+	font-size: 150%;
 	background: #55acee;
 	height: 50px;
 	width: 50px;
@@ -376,6 +380,7 @@ h4{
 }
 
 .fa-facebook-f{
+	font-size: 150%;
 	background: #3b5999;
   	height: 50px;
   	width: 50px;
@@ -386,6 +391,7 @@ h4{
 }
 
 .fa-youtube {
+	font-size: 150%;
   	height: 50px;
   	width: 50px;
   	line-height: 50px;
@@ -487,12 +493,14 @@ h4{
 
 	.profile-info{
 		box-sizing: border-box;
-		padding: 10px 0 0 100px;
+		margin-top: 30px;
+		margin-left: 100px;
+
 	}
 
 	.results{
 		max-width: 70%;
-		margin: 20px 50px 20px 0px;
+		margin-right: 50px;
 	}
 /*END OF PROFILE CARD STYLINGS*/
 
