--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -62,74 +62,13 @@ table {
 }
 /*Color Palette
 Turqoise - #72a9ae;
+Dark Turqoise - #487b7d;
+Overlay Pink - rgba(255, 201, 194, 0.73);
 Light Grey - #efefef;
 Dark Grey - #454545;
 */
 /*MOBILE FIRST STYLING!*/
 /*================*/
-/*OVERLAY Styling*/
-.overlay-container {
-	display: none;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	background: rgba(93, 9, 68, 0.12);
-}
-
-.loader {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 150px;
-	height: 150px;
-	margin: -75px 0 0 -75px;
-	border: 16px solid #5d0944;
-	border-radius: 50%;
-	border-top: 16px solid #ffffff;
-	animation: spin 2s linear infinite, change-color 4s ease-in-out infinite, border-radius-change 1s ease infinite;
-}
-
-@keyframes spin {
-	/*from sets the start of the property in an animation*/
-	from {
-		transform: rotate(0deg);
-	}
-	/*to sets the ending of the property in an animation*/
-	to {
-		transform: rotate(360deg);
-	}
-}
-
-@keyframes change-color {
-	/*0 % is begining*/
-	0% {
-		border-top-color: #ffffff;
-	}
-	/*50% is the middle*/
-	50% {
-		border-top-color: #f382d3;
-	}
-	/*100% is ending*/
-	100% {
-		border-top-color: #df16a6;
-	}
-}
-
-@keyframes border-radius-change {
-	0% {
-		border-radius: 50%;
-	}
-
-	50% {
-		border-radius: 0%;
-	}
-
-	100% {
-		border-radius: 50%;
-	}
-}
 /*===================*/
 /*FOR FLUID STYLING*/
 .col-main, .col-footer, img {
@@ -166,7 +105,8 @@ body {
 
 /*HEADER STYLES*/
 .logo {
-	padding: 20px 0px 20px 0px;
+	/*padding: 20px 0px 20px 0px;*/
+	margin: 20px;
 	box-sizing: border-box;
 	width: 50%;
 	float: left;
@@ -207,11 +147,9 @@ body {
 }
 
 /*MOBILE NAVIGATION STYLING*/
-
-
 .ham {
 	height: 15px;
-	margin: 15px;
+	margin: 25px;
 	padding-top: 5px;
 	position: relative;
 	float: right;
@@ -270,12 +208,91 @@ img:hover{
 	box-shadow: 3px 5px 10px rgba(0,0,0,0.5);
 	cursor: pointer;
 }*/
-/*IMAGE STYLING END*/
-/*==================*/
-/*TABLE STYLING*/
-table {
-	margin: auto;
+/*OVERLAY STYING*/
+.overlay-container {
+	display: none;
+	left: 0;
+	top: 0;
 	width: 100%;
+	height: 100%;
+	position: fixed;
+	background: rgba(255, 201, 194, 0.73);
+}
+
+.loader {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 150px;
+	height: 150px;
+	margin: -75px 0 0 -75px;
+	border: 16px solid #E8A5AB;
+	border-radius: 50%;
+	border-top: 16px solid #FFB5E1;
+	animation: spin 2s linear infinite, change-color 4s ease-in-out infinite, border-radius-change 1s ease infinite;
+}
+
+@keyframes spin {
+	/*from sets the start of the property in an animation*/
+	from {
+		transform: rotate(0deg);
+	}
+	/*to sets the ending of the property in an animation*/
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes change-color {
+	/*0 % is begining*/
+	0% {
+		border-top-color: #ffffff;
+	}
+	/*50% is the middle*/
+	50% {
+		border-top-color: #FFB5E1;
+	}
+	/*100% is ending*/
+	100% {
+		border-top-color: #E8A5AB;
+	}
+}
+
+@keyframes border-radius-change {
+	0% {
+		border-radius: 50%;
+	}
+
+	50% {
+		border-radius: 0%;
+	}
+
+	100% {
+		border-radius: 50%;
+	}
+}
+/*OVERLAY STYLING END*/
+/*==================*/
+/*ARTICLE STYLING*/
+.main-content{
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 10px;
+}
+
+.img{
+	margin-left: 20px;
+	margin-right: 20px;
+}
+/*ARTICLE STYLING END*/
+/*TABLE STYLING*/
+.schedule-header{
+	margin-left: 20px;
+}
+
+table {
+	margin-left: 20px;
+	width: 95%;
 }
 
 th {
@@ -520,14 +537,13 @@ h4 {
 	.main-content {
 		float: left;
 		box-sizing: border-box;
-		max-width: 70%;
-		padding-right: 20px;
+		max-width: 63%;
 	}
 
 	.img {
 		float: right;
 		box-sizing: border-box;
-		max-width: 30%;
+		max-width: 28%;
 		margin-top: 50px;
 	}
 /*END OF ARTICLE STYLINGS*/
