--- a/lib2024/final/css/fonts.css
+++ b/lib2024/final/css/fonts.css
@@ -1,3 +1,4 @@
 @charset "utf-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
+@import url('../fonts/bitstream_vera_sans/stylesheet.css')
